[package]
name = "dsmr"
version = "0.1.0"
authors = ["Victor Roest <victor@xirion.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsmr5 = { git = "https://github.com/NULLx76/dsmr5" }
serial = "0.4.0"
sentry = "0.21"
thiserror = "1.0"
mqtt-async-client = "0.1.7"
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
lto = true
