[package]
name = "dsmr2mqtt"
version = "0.2.1"
authors = ["Victor Roest <victor@xirion.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsmr5 = { git = "https://github.com/NULLx76/dsmr5" }
serial = "0.4.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
rumqttc = "0.5"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.1.0"

[profile.release]
lto = true
